修正  - 新用户注册表内容补全bug  - 后台编辑表单区域不正确bug.
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/shop/static/shop/css/css.less
+++ b/shop/static/shop/css/css.less
@@ -300,6 +300,8 @@ body {
 
                 >a{
                     float: left;
+                    padding-bottom: 0.125rem;
+                    margin-bottom: 0.3125rem;
                 }
 
                 .dico{
