--- a/inventory/templates/inventoryui.htm
+++ b/inventory/templates/inventoryui.htm
@@ -12,13 +12,55 @@
       </div>
       <table cellpadding="3" cellspacing="1" width="100%">
           <tr>
-            <th>名称</th>
             <th>厂房</th>
+            <th>名称</th>
             <th>规格</th>
             <th>预 | 库 | 总</th>
             <th>数量</th>
             <th>操作</th>
           </tr>
+{% for b in build %}
+          <tr align="center" class="tr_border_top_rare">
+            <td>{{ b.get_name_display }}</td>
+            <td colspan="5">&nbsp;</td>
+          </tr>
+          <tr align="center" class="tr_border_top_black">
+            <td>&nbsp;</td>
+            <td>奶酪芒果派</td>
+            <td>&nbsp;</td>
+            <td><span class="wow_item_1">0</span> | <span class="wow_item_8">4</span> | <span class="wow_item_0">4</span></td>
+            <td colspan="2">&nbsp;</td>
+          </tr>
+
+          <tr align="center">
+            <td colspan="2">&nbsp;</td>
+            <td>1.5磅：≈ π * (1/2 * 19 (cm))^2</td>
+            <td><span class="wow_item_1">0</span> | <span class="wow_item_8">3</span> | <span class="wow_item_0">3</span></td>
+            <td><input ytpe="text" name="n17335" value="1" size="1" /></td>
+            <td nowrap="nowrap" align="center">
+
+            <a href="/inventory/minus/17335/1/" class="button act">减</a>
+
+            <a href="/inventory/plus/17335/1/" class="button act">加</a>
+
+            </td>
+          </tr>
+          <tr align="center">
+            <td colspan="2">&nbsp;</td>
+            <td>2.5磅：≈ π * (1/2 * 23 (cm))^2</td>
+            <td><span class="wow_item_1">0</span> | <span class="wow_item_8">1</span> | <span class="wow_item_0">1</span></td>
+            <td><input ytpe="text" name="n17336" value="1" size="1" /></td>
+            <td nowrap="nowrap" align="center">
+
+            <a href="/inventory/minus/17336/1/" class="button act">减</a>
+
+            <a href="/inventory/plus/17336/1/" class="button act">加</a>
+
+            </td>
+          </tr>
+
+
+{% endfor %}
 {% for i in pro %}
           <tr align="center" class="tr_border_top_rare">
             <td>{{ i.name }}</td>
@@ -26,6 +68,8 @@
             <!-- <td><span class="wow_item_1">{{ i.adv }}</span> | <span class="wow_item_8">{{ i.count }}</span> | <span class="wow_item_0">{{ i.num }}</span></td> -->
             <td colspan="5">&nbsp;</td>
           </tr>
+{% regroup i by build as newsList %}
+{% for n in newsList %}
           <tr align="center" class="tr_border_top_black">
             <td>&nbsp;</td>
             <td>南宁</td>
@@ -33,8 +77,7 @@
             <td><span class="wow_item_1">{{ i.adv }}</span> | <span class="wow_item_8">{{ i.count }}</span> | <span class="wow_item_0">{{ i.num }}</span></td>
             <td colspan="2">&nbsp;</td>
           </tr>
-
-{% for ii in i.invnum %}
+<!-- {% for ii in i.invnum %}
           <tr align="center">
             <td colspan="2">&nbsp;</td>
             <td>{{ ii.spec.spec.value }}</td>
@@ -46,33 +89,13 @@
 {% endfor %}
             </td>
           </tr>
-{% endfor %}
-          </tr>
-          <tr align="center" class="tr_border_top_black">
-            <td>&nbsp;</td>
-            <td>长沙</td>
-            <td>&nbsp;</td>
-            <td><span class="wow_item_1">{{ i.adv }}</span> | <span class="wow_item_8">{{ i.count }}</span> | <span class="wow_item_0">{{ i.num }}</span></td>
-            <td colspan="2">&nbsp;</td>
-          </tr>
+{% endfor %} -->
 
-{% for ii in i.invnum %}
-          <tr align="center">
-            <td colspan="2">&nbsp;</td>
-            <td>{{ ii.spec.spec.value }}</td>
-            <td><span class="wow_item_1">{{ ii.invnum.adv }}</span> | <span class="wow_item_8">{{ ii.invnum.count }}</span> | <span class="wow_item_0">{{ ii.invnum.num }}</span></td>
-            <td>{% if ii.action %}<input ytpe="text" name="n{{ ii.invnum.id }}" value="1" size="1" />{% else %}&nbsp;{% endif %}</td>
-            <td nowrap="nowrap" align="center">
-{% for iii in ii.action  %}
-            <a href="{% url iii.2 ii.invnum.id 1 %}" class="button act">{{ iii.1 }}</a>
-{% endfor %}
-            </td>
-          </tr>
 {% endfor %}
 {% endfor %}
           <tr>
             <td align="center"><a href="{% url 'inventory:defaultInv' form.initial.s %}" class="button">备货格式化</a></td>
-            <td colspan="3">&nbsp;</td>
+            <td colspan="5">&nbsp;</td>
           </tr>
       </table>
 {% endblock %}
