修正  - 前台会员注册所需字段  - 前台购物车模板
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/account/templates/login.htm
+++ b/account/templates/login.htm
@@ -39,6 +39,12 @@
                     <td>{{ i }}</td>
                 </tr>
 {% endfor %}
+{% for i in bthFrm %}
+                <tr>
+                    <td align="right">生{{ i.label }}：</td>
+                    <td>{{ i }}</td>
+                </tr>
+{% endfor %}
                 <tr>
                     <td align="right"></td>
                     <td>
