前台前端兼容 IE6+ (sb) 修正部分模板显示
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/print/templates/print.htm
+++ b/print/templates/print.htm
@@ -58,7 +58,7 @@
   <tr>
       <td width="350px" nowrap="nowrap">31客蛋糕（www.31kecake.com）</td>
       <td nowrap="nowrap">订购电话: 4000-592731</td>
-      <td nowrap="nowrap">投诉电话: 0771-5676753</td>
+      <td nowrap="nowrap">投诉电话: 0771-5676753（南宁）｜ 0731-89708031（长沙）</td>
   </tr>
   <tr>
       <td colspan="10">{{ o.logcs.note }}</td>
