--- a/article/templates/article.htm
+++ b/article/templates/article.htm
@@ -5,7 +5,7 @@
 {% endif %}
 
 {% block section %}
-        <menu id="sidebar">
+        <menu>
 {% for i in alists %}
             <li><a href="{% url 'article:article' i.tag %}" {% ifequal i.tag tag %}class="on"{% endifequal %}>{{ i.title }}</a></li>
 {% endfor %}
