--- a/shop/static/shop/css/css.css
+++ b/shop/static/shop/css/css.css
@@ -1,4 +1,3 @@
-/* CSS Document */
 * {
   margin: 0;
   padding: 0;
@@ -11,6 +10,8 @@ a {
   color: #4b3c37;
   white-space: nowrap;
   text-decoration: none;
+  display: inline-block;
+  border-bottom: thick solid #FFF;
 }
 a:hover,
 a.on {
@@ -18,7 +19,6 @@ a.on {
 }
 p {
   line-height: 1.5;
-  font-size: 0.75em;
 }
 ul,
 ol,
@@ -130,7 +130,6 @@ html {
 }
 body {
   color: #4b3c37;
-  font-family: Arial, Helvetica, sans-serif;
   background: #FFF;
 }
 @media screen and (max-width: 479px) {
@@ -228,6 +227,7 @@ body #mn a {
   padding-left: 2em;
   padding-right: 0.66666667em;
   line-height: 1.6;
+  border: none;
 }
 body #mn a:hover {
   border: none !important;
@@ -315,15 +315,10 @@ body #ms {
   display: inline-block;
   min-height: 2em;
   padding-bottom: 2em;
-  font-size: 0.75em;
 }
 body #ms p {
-  text-indent: 1.5em;
+  /*text-indent: 1.5em;*/
   padding-bottom: 0.25em;
-}
-body #ms img {
-  width: 100%;
-  height: 100%;
 }
 body #ms ol#pinBox {
   width: 100%;
@@ -339,6 +334,9 @@ body #ms ol#pinBox .item {
     width: 100%;
     margin-bottom: 0.375em;
   }
+  body #ms ol#pinBox .item .side {
+    width: auto;
+  }
 }
 @media screen and (min-width: 630px) and (max-width: 819px) {
   body #ms ol#pinBox .item .styp {
@@ -351,6 +349,7 @@ body #ms ol#pinBox .item {
     width: 36.375em;
     margin-left: auto;
     margin-right: auto;
+    float: none;
   }
 }
 @media screen and (min-width: 820px) and (max-width: 985px) {
@@ -385,6 +384,7 @@ body #ms ol#pinBox .item {
 }
 body #ms ol#pinBox .item .styp {
   height: 37.5em;
+  overflow: hidden;
 }
 body #ms ol#pinBox .item .side {
   background: #FFFFFF;
@@ -439,45 +439,69 @@ body #ms ol#pinBox .item .side .button a {
 body #ms #bner {
   width: 100%;
   height: 530px;
-  padding-bottom: 20px;
+  overflow: hidden;
   float: left;
 }
 body #ms menu {
   width: 15%;
-  float: left;
-  font-size: 0.875em;
-  padding-bottom: 2em;
+  /*float: left;*/
+  font-size: 0.75em;
+  padding-bottom: 1em;
 }
 body #ms menu li {
-  padding: 0 2em 0 0.5em;
+  padding-left: 0.5em;
 }
 body #ms menu li a {
-  line-height: 2;
+  padding: 0.5em;
 }
 @media screen and (max-width: 629px) {
-  body #ms section,
-  body #ms article {
+  body #ms menu {
     width: 100%;
-    text-align: -webkit-center;
+    /*font-size:2em;*/
+    /*font-weight: bold;*/
   }
 }
 @media screen and (min-width: 630px) {
-  body #ms section,
+  body #ms menu {
+    float: left;
+  }
+}
+@media screen and (max-width: 479px) {
+  body #ms article {
+    font-size: 2.5em;
+  }
+  body #ms article p {
+    width: auto;
+  }
+  body #ms article p img {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 909px) {
+  body #ms article {
+    font-size: 2em;
+  }
+  body #ms article p {
+    width: auto;
+  }
+  body #ms article p img {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 910px) {
   body #ms article {
     width: 85%;
     float: right;
   }
-  body #ms section form,
   body #ms article form {
-    float: left;
+    /*float: left;*/
     padding: 0 2em;
   }
 }
 body #ms article h3 {
-  text-indent: 1.5em;
   line-height: 2em;
 }
 body #ms article p {
-  font-size: 1.5em;
-  text-indent: 1.5em;
+  font-size: 0.75em;
+  text-indent: 2em;
 }
