--- a/tag/templates/tag.htm
+++ b/tag/templates/tag.htm
@@ -33,7 +33,7 @@
         </nav>
         <div class="button">
           <a class="btn btnbr btnLike" href="{% url 'tag:itemLike' i.id %}">赞</a>
-          <a class="btn btnbr btnBuy" href="{% url 'tag:getSpec' i.id %}">购买</a>
+          <a class="btn btnbr btnBuy" href="{% url 'tag:getSpec' i.id %}">售价</a>
         </div>
       </section>
     </li>
