--- a/shop/static/shop/css/css.css
+++ b/shop/static/shop/css/css.css
@@ -37,6 +37,7 @@ table {
 table tr td {
   padding: 3px;
   line-height: 2;
+  white-space: nowrap;
 }
 input[type=text],
 input[type=password],
@@ -226,7 +227,7 @@ body #mn a {
   height: 2.5em;
   padding-left: 2em;
   padding-right: 0.66666667em;
-  line-height: 1.6;
+  line-height: 1.8;
   border: none;
 }
 body #mn a:hover {
@@ -355,7 +356,7 @@ body #ms ol#pinBox .item {
 @media screen and (min-width: 820px) and (max-width: 985px) {
   body #ms ol#pinBox .item .styp {
     float: left;
-    width: 50em;
+    width: 37.5em;
   }
   body #ms ol#pinBox .item .side {
     float: right;
@@ -365,7 +366,7 @@ body #ms ol#pinBox .item {
 @media screen and (min-width: 886px) and (max-width: 909px) {
   body #ms ol#pinBox .item .styp {
     float: left;
-    width: 50em;
+    width: 37.5em;
   }
   body #ms ol#pinBox .item .side {
     float: right;
@@ -375,7 +376,7 @@ body #ms ol#pinBox .item {
 @media screen and (min-width: 910px) {
   body #ms ol#pinBox .item .styp {
     float: left;
-    width: 50em;
+    width: 37.5em;
   }
   body #ms ol#pinBox .item .side {
     float: right;
@@ -383,7 +384,7 @@ body #ms ol#pinBox .item {
   }
 }
 body #ms ol#pinBox .item .styp {
-  height: 37.5em;
+  height: 28.125em;
   overflow: hidden;
 }
 body #ms ol#pinBox .item .side {
@@ -400,6 +401,7 @@ body #ms ol#pinBox .item .side h2 a {
   color: #cf9764;
 }
 body #ms ol#pinBox .item .side p {
+  font-size: 0.75em;
   width: 100%;
   color: #999;
   text-indent: 1.5em;
@@ -410,6 +412,7 @@ body #ms ol#pinBox .item .side .pinInfo {
   padding: 0.5em 0;
 }
 body #ms ol#pinBox .item .side .pinInfo div {
+  font-size: 0.75em;
   background: url(/static/images/photoDes.png) no-repeat;
   padding-left: 2em;
   margin-left: 0.5em;
@@ -423,15 +426,15 @@ body #ms ol#pinBox .item .side .pinInfo .like {
 }
 body #ms ol#pinBox .item .side nav {
   width: 100%;
-  line-height: 1.8;
   text-decoration: none;
 }
 body #ms ol#pinBox .item .side nav a {
-  margin: 0 0.3125em;
+  font-size: 0.75em;
+  margin: 0 0.25em;
 }
 body #ms ol#pinBox .item .side .button {
   width: 100%;
-  margin-top: 2em;
+  margin-top: 0.5em;
 }
 body #ms ol#pinBox .item .side .button a {
   margin: 0.5em;
@@ -444,7 +447,6 @@ body #ms #bner {
 }
 body #ms menu {
   width: 15%;
-  /*float: left;*/
   font-size: 0.75em;
   padding-bottom: 1em;
 }
@@ -457,8 +459,6 @@ body #ms menu li a {
 @media screen and (max-width: 629px) {
   body #ms menu {
     width: 100%;
-    /*font-size:2em;*/
-    /*font-weight: bold;*/
   }
 }
 @media screen and (min-width: 630px) {
@@ -467,41 +467,77 @@ body #ms menu li a {
   }
 }
 @media screen and (max-width: 479px) {
+  body #ms section,
   body #ms article {
     font-size: 2.5em;
   }
+  body #ms section p,
   body #ms article p {
     width: auto;
   }
+  body #ms section p img,
   body #ms article p img {
     width: 100%;
+  }
+  body #ms section form,
+  body #ms article form {
+    font-size: 0.75em;
   }
 }
 @media screen and (min-width: 480px) and (max-width: 909px) {
+  body #ms section,
   body #ms article {
     font-size: 2em;
   }
+  body #ms section p,
   body #ms article p {
     width: auto;
   }
+  body #ms section p img,
   body #ms article p img {
     width: 100%;
   }
+  body #ms section form,
+  body #ms article form {
+    font-size: 0.75em;
+  }
+}
+@media screen and (min-width: 910px) {
+  body #ms section form,
+  body #ms article form {
+    font-size: 0.75em;
+    float: left;
+    padding-left: 10em;
+  }
+}
+body #ms section h1,
+body #ms article h1,
+body #ms section h2,
+body #ms article h2,
+body #ms section h3,
+body #ms article h3,
+body #ms section h4,
+body #ms article h4,
+body #ms section h5,
+body #ms article h5,
+body #ms section h6,
+body #ms article h6 {
+  line-height: 2em;
+}
+body #ms section p,
+body #ms article p {
+  font-size: 0.75em;
+  text-indent: 2em;
+}
+body #ms section ol,
+body #ms article ol {
+  font-size: 0.75em;
+  list-style-type: decimal;
+  padding-left: 4em;
 }
 @media screen and (min-width: 910px) {
   body #ms article {
     width: 85%;
     float: right;
   }
-  body #ms article form {
-    /*float: left;*/
-    padding: 0 2em;
-  }
-}
-body #ms article h3 {
-  line-height: 2em;
-}
-body #ms article p {
-  font-size: 0.75em;
-  text-indent: 2em;
 }
