--- a/shop/static/shop/css/css.less
+++ b/shop/static/shop/css/css.less
@@ -33,6 +33,7 @@ table {
 table tr td {
     padding: 3px;
     line-height: 2;
+    white-space: nowrap;
 }
 input[type=text], input[type=password], textarea {
     height: 22px;
@@ -219,7 +220,7 @@ body {
             height: 2.5em;
             padding-left: 2em;
             padding-right: 2/3em;
-            line-height: 1.6;
+            line-height: 1.8;
             border: none;
             &:hover {
                 border: none !important;
@@ -350,7 +351,7 @@ body {
                 @media screen and (min-width: 820px) and (max-width: 985px) {
                     .styp {
                         float: left;
-                        width: 50em;
+                        width: 37.5em;
                     }
                     .side {
                         float: right;
@@ -360,7 +361,7 @@ body {
                 @media screen and (min-width: 886px) and (max-width: 909px) {
                     .styp {
                         float: left;
-                        width: 50em;
+                        width: 37.5em;
                     }
                     .side {
                         float: right;
@@ -370,7 +371,7 @@ body {
                 @media screen and (min-width: 910px) {
                     .styp {
                         float: left;
-                        width: 50em;
+                        width: 37.5em;
                     }
                     .side {
                         float: right;
@@ -378,7 +379,7 @@ body {
                     }
                 }
                 .styp {
-                    height: 37.5em;
+                    height: 28.125em;
                     overflow: hidden;
                 }
                 .side {
@@ -394,6 +395,7 @@ body {
                         }
                     }
                     p {
+                        font-size: 0.75em;
                         width: 100%;
                         color: #999;
                         text-indent: 1.5em;
@@ -403,6 +405,7 @@ body {
                         width: 100%;
                         padding: 0.5em 0;
                         div {
+                            font-size: 0.75em;
                             background: url(/static/images/photoDes.png) no-repeat;
                             padding-left: 2em;
                             margin-left: 0.5em;
@@ -417,15 +420,15 @@ body {
                     }
                     nav {
                         width: 100%;
-                        line-height: 1.8;
                         text-decoration: none;
                         a {
-                            margin: 0 0.3125em;
+                            font-size: 0.75em;
+                            margin: 0 0.25em;
                         }
                     }
                     .button {
                         width: 100%;
-                        margin-top: 2em;
+                        margin-top: 0.5em;
                         a {
                             margin: 0.5em;
                         }
@@ -441,7 +444,6 @@ body {
         }
         menu {
             width: 15%;
-            /*float: left;*/
             font-size: 0.75em;
             padding-bottom: 1em;
             li {
@@ -452,14 +454,12 @@ body {
             }
             @media screen and (max-width: 629px) {
                 width:100%;
-                /*font-size:2em;*/
-                /*font-weight: bold;*/
             }
             @media screen and (min-width: 630px) {
                 float: left;
             }
         }
-        article {
+        section, article {
             @media screen and (max-width: 479px) {
                 font-size: 2.5em;
                 p {
@@ -467,6 +467,9 @@ body {
                     img {
                         width: 100%;
                     }
+                }
+                form {
+                    font-size: 0.75em;
                 }
             }
             @media screen and (min-width: 480px) and (max-width: 909px) {
@@ -477,21 +480,34 @@ body {
                         width: 100%;
                     }
                 }
-            }
-            @media screen and (min-width: 910px) {
-                width: 85%;
-                float: right;
                 form {
-                    /*float: left;*/
-                    padding: 0 2em;
+                    font-size: 0.75em;
                 }
             }
-            h3 {
+            @media screen and (min-width: 910px) {
+                form {
+                    font-size: 0.75em;
+                    float: left;
+                    padding-left: 10em;
+                }
+            }
+            h1, h2, h3, h4, h5, h6 {
                 line-height: 2em;
             }
             p {
                 font-size: 0.75em;
                 text-indent: 2em;
+            }
+            ol {
+                font-size: 0.75em;
+                list-style-type: decimal;
+                padding-left: 4em;
+            }
+        }
+        article {
+            @media screen and (min-width: 910px) {
+                width: 85%;
+                float: right;
             }
         }
     }
