--- a/shop/templates/shop.htm
+++ b/shop/templates/shop.htm
@@ -4,7 +4,7 @@
         {% for i in ad %}
         <li>
             <a href="{{ i.url }}" target="_blank">
-                <img src="{{ i.img.url }}" />
+                <img data-src="{{ i.img.url }}" />
             </a>
         </li>
         {% endfor %}
