修正  - 支付宝通知bug  - 模型字段统一为科学计数
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/shop/static/shop/css/css.css
+++ b/shop/static/shop/css/css.css
@@ -109,7 +109,16 @@ textarea:focus {
   display: inline-block;
 }
 .fl {
-  float: left;
+  float: left !important;
+}
+.fn {
+  float: none !important;
+}
+.p0 {
+  padding: 0 !important;
+}
+.m0 {
+  margin: 0 !important;
 }
 .bline {
   border: solid #E5E5E5;
