--- a/shop/static/shop/css/css.less
+++ b/shop/static/shop/css/css.less
@@ -51,6 +51,7 @@ textarea {
 input:focus, textarea:focus {
     box-shadow: 0 0 0 0.1em #FFFFFF inset;
 }
+
 .input {
     border: 0.1em solid #cc9866;
     padding: 0.1875em;
@@ -102,7 +103,16 @@ input:focus, textarea:focus {
     display: inline-block;
 }
 .fl {
-    float: left;
+    float: left !important;
+}
+.fn{
+    float: none !important;
+}
+.p0{
+    padding: 0 !important;;
+}
+.m0{
+    margin: 0 !important;;
 }
 .bline {
     border: solid #E5E5E5;
