--- a/cart/templates/cart.htm
+++ b/cart/templates/cart.htm
@@ -1,6 +1,6 @@
 {% extends "shop.base.htm" %} {% block section %}
 <section>
-    <form name="toCart" method="post" action="{% url 'cart:cart' %}">
+    <form name="toCart" method="post" action="{% url 'cart:cart' %}" class="fn p0 m0">
         <table width="100%">
             <tr>
                 <th>商品名称</th>
